# py-kms-gui

./: .gitignore  LICENSE  README.md  logo.xbm  pyproject.toml
py_kms_service/: def_gui.py  def_service.py  main.py
py_kms_service/windows/: win_service.py
