[tool.poetry]
name = "py-kms-service"
version = "0.1.1"
description = "PyKMS as a service"
authors = ["Jovial Joe Jayarson <jovial7joe@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "py_kms_service" }]

[tool.poetry.dependencies]
python = "^3.10"
py-kms-api = "^1.0.1"
customtkinter = "^4.6.3"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"
pylint = "^2.15.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
